Updated README with links to articles.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Blog.Modern Developer</title>
- -	<link rel="stylesheet" href="css/reset.css">
- -	<link rel="stylesheet" href="css/main.css">
- -	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,300italic|Roboto+Slab:400,300,700,100' rel='stylesheet' type='text/css'>
- -	<script src="https://use.fontawesome.com/c3e06da910.js"></script>
- -	<meta name="viewport" content="width=device-width, initial-scale=1">
- -</head>
+ 	<link rel="stylesheet" href="css/reset.css">
+ 	<link rel="stylesheet" href="css/main.css">
+ 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,300italic|Roboto+Slab:400,300,700,100' rel='stylesheet' type='text/css'>
+ 	<script src="https://use.fontawesome.com/c3e06da910.js"></script>
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
