--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 			<div class="emailForm">
 			    <form method="" class="emailForm" id="email-form">
-			    	<input type="text" id="email" name="email" placeholder="Your Email" class="form-control" >
+			    	<input type="email" id="email" name="email" placeholder="Your Email" class="form-control" required>
 			    	<input type="submit" value="Subscribe" class="button submit form-control"  >
 			    </form>
   			</div>
